Fixed some bugs that occur when page viewed on mobile

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html, body {
 	width: 100%;
 	height: 100%;
-	background-color: #bcbcbc;
+	/*background-color: #bcbcbc;*/
 }
 
 .navbar {
@@ -20,12 +20,7 @@ html, body {
 }
 
 .text-vertical-center h1 {
-	padding-bottom: 0px;
-}
 
-.text-vertical-center h3 {
-	padding-bottom: 15px;
-	letter-spacing: 3px;
 }
 
 .text-vertical-center {
@@ -38,11 +33,14 @@ html, body {
 .text-vertical-center h1 {
 	font-size: 6em;
 	color: black;
+	padding-bottom: 0px;
 }
 
 .text-vertical-center h3 {
 	color: #000000;
 	font-size: 1.25em;
+	padding-bottom: 15px;
+	letter-spacing: 3px;
 }
 
 .header {
